Add px data table

--- a/APM/index.html
+++ b/APM/index.html
@@ -41,6 +41,7 @@
     <!-- Controllers -->
     <script src="app/products/productListController.js"></script>
     <script src="app/products/productDetailController.js"></script>
+    <script src="app/products/pxTableController.js"></script>
 </body>
 
 </html>
