--- a/APM/index.html
+++ b/APM/index.html
@@ -8,11 +8,11 @@
     <link href="styles/bootstrap.css" rel="stylesheet" />
 </head>
 
-<body ng-app="productManagement">
+<body ng-controller="MainController">
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <div class="navbar-brand">Acme Product Management</div>
+                <div class="navbar-brand">Acme Product Management-{{message}}</div>
             </div>
         </div>
     </nav>
@@ -26,6 +26,9 @@
     <script src="scripts/angular-resource.js"></script>
     <script src="scripts/angular-mocks.js"></script>
     <script src="scripts/angular-route.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-touch.js"></script> 
+<!--<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-animate.js"></script>
+<script src="https://cdn.rawgit.com/angular-ui/bower-ui-grid/master/ui-grid.min.js"></script> -->
     
     <!-- Application Script -->
     <script src="app/app.js"></script>
